Add GH_TOKEN for skyline

--- a/.github/workflows/skyline.yml
+++ b/.github/workflows/skyline.yml
@@ -6,12 +6,13 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      # See action.yml for all options
+      # Metrics.svg
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
           token: ${{ secrets.GH_TOKEN }}
-
+      
+      # GitHub Skyline 2021
       - uses: lowlighter/metrics@latest
         with:
           plugin_skyline: yes
@@ -19,3 +20,4 @@ jobs:
           plugin_skyline_frames: 60       
           plugin_skyline_quality: 0.5     
           plugin_skyline_compatibility: yes # Supports Firefox and Safari
+          token: ${{ secrets.GH_TOKEN }}
