--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,6 @@
 name: GitHub Metrics
 on:
-  schedule: [{cron: "0 0 * * *"}]
+  schedule: [{cron: "0 0 * * 0"}]
   workflow_dispatch:
 jobs:
   # Credits: https://github.com/lowlighter/metrics
