--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,18 +11,18 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           plugin_skyline: yes
-          plugin_skyline_year: 2022    
+          plugin_skyline_year: 2023   
           plugin_skyline_frames: 60       
           plugin_skyline_quality: 1
           plugin_skyline_compatibility: yes
           filename: assets/metrics.plugin.skyline.svg
-          token: ${{ secrets.GH_NOICE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: GitHub City
         uses: lowlighter/metrics@latest
         with:
           base: ""
           plugin_skyline: yes
-          plugin_skyline_year: 2022
+          plugin_skyline_year: 2023
           plugin_skyline_frames: 6
           plugin_skyline_quality: 1
           plugin_skyline_settings: |
@@ -33,7 +33,7 @@ jobs:
               "hide": ".github-corner, .footer-link, .buttons-options, .mobile-rotate, .display-info span:first-child"
             }
           filename: assets/metrics.plugin.skyline.city.svg
-          token: ${{ secrets.GH_NOICE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Contribution Graph
         uses: lowlighter/metrics@latest
         with:
@@ -41,7 +41,7 @@ jobs:
           plugin_calendar: yes
           plugin_calendar_limit: 0
           filename: assets/github-contrib-stats.svg
-          token: ${{ secrets.GH_NOICE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Profile Stats
         uses: lowlighter/metrics@latest
         with:
@@ -49,7 +49,7 @@ jobs:
           base: header
           plugin_introduction: yes
           filename: assets/github-user-stats.svg
-          token: ${{ secrets.GH_NOICE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Recently Starred
         uses: lowlighter/metrics@latest
         with:
@@ -57,5 +57,5 @@ jobs:
           plugin_stars: yes
           plugin_stars_limit: 3
           filename: assets/metrics.plugin.stars.svg
-          token: ${{ secrets.GH_NOICE }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
